# pypelite

./: .buildinfo  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_sources/: index.rst.txt
docs/: conf.py
src/pypelite/: __init__.py  configs.py
tests/: test_pipeline.py
